Fix dark mode modal text color

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -109,6 +109,7 @@ body.dark {
 	.modal-content {
 		background-color: $gray-800;
 		border-color: $gray-700;
+		color: $light;
 	}
 
 	.modal-header {
